syntax = "proto3";

package greet;

import "google/api/annotations.proto";

option  java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
    string input_language = 1;
    string input_string = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

service GreetService {
    //Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {
        option (google.api.http) = { get: "/v1/shelves" };
    };

    //server streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    //Client streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

    //BiDi Streaming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}